# peris

./: CMakeLists.txt
include/: peris.h  render.h  solver.h  world.h
src/: main.cpp  peris.cpp  world.cpp
